deployment/kubernentes/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: client
spec:
    replicas: 1
    selector:
        matchLabels:
            app: client
    template:
        metadata:
            labels:
                app: client
        spec:
            containers:
                - name: client
                  image: quyennv0602/datn_client:0.0.3
                  ports:
                      - containerPort: 80
                  resources:
                      requests:
                          memory: "128Mi"
                          cpu: "256m"
                      limits:
                          memory: "256Mi"
                          cpu: "512m"
---
apiVersion: v1
kind: Service
metadata:
    name: client-service
spec:
    selector:
        app: client
    ports:
        - protocol: TCP
          port: 80
          targetPort: 80
    type: ClusterIP
