deployment/kubernentes/communication-service-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        io.kompose.service: communication-service-db
    name: communication-service-db
spec:
    replicas: 1
    selector:
        matchLabels:
            io.kompose.service: communication-service-db
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                io.kompose.service: communication-service-db
        spec:
            containers:
                - args:
                      - postgres
                      - -c
                      - wal_level=logical
                  image: debezium/example-postgres
                  name: communication-service-db
                  ports:
                      - containerPort: 5432
                        protocol: TCP
                  resources:
                      requests:
                          memory: "256Mi"
                          cpu: "500m"
                      limits:
                          memory: "512Mi"
                          cpu: "1"
                  volumeMounts:
                      - mountPath: /var/lib/postgresql/communications
                        name: communication-service-db
            restartPolicy: Always
            volumes:
                - name: communication-service-db
                  persistentVolumeClaim:
                      claimName: communication-service-db

---
apiVersion: v1
kind: Service
metadata:
    labels:
        io.kompose.service: communication-service-db
    name: communication-service-db
spec:
    ports:
        - name: "5433"
          port: 5433
          targetPort: 5432
    selector:
        io.kompose.service: communication-service-db
