deployment/kubernentes/course-service-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        io.kompose.service: course-service-db
    name: course-service-db
spec:
    replicas: 1
    selector:
        matchLabels:
            io.kompose.service: course-service-db
    strategy:
        type: Recreate
    template:
        metadata:
            annotations:
                kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
                kompose.version: 1.34.0 (cbf2835db)
            labels:
                io.kompose.service: course-service-db
        spec:
            containers:
                - args:
                      - postgres
                      - -c
                      - wal_level=logical
                  image: debezium/example-postgres
                  name: course-service-db
                  ports:
                      - containerPort: 5432
                  resources:
                      requests:
                          memory: "256Mi"
                          cpu: "500m"
                      limits:
                          memory: "512Mi"
                          cpu: "1"
                  volumeMounts:
                      - mountPath: /var/lib/postgresql/courses
                        name: course-service-db
            restartPolicy: Always
            volumes:
                - name: course-service-db
                  persistentVolumeClaim:
                      claimName: course-service-db
---
apiVersion: v1
kind: Service
metadata:
    labels:
        io.kompose.service: course-service-db
    name: course-service-db
spec:
    ports:
        - name: "5434"
          port: 5434
          targetPort: 5432
    selector:
        io.kompose.service: course-service-db
