deployment/kubernentes/debezium.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        service: debezium
    name: debezium
spec:
    replicas: 1
    selector:
        matchLabels:
            service: debezium
    template:
        metadata:
            labels:
                service: debezium
        spec:
            containers:
                - env:
                      - name: BOOTSTRAP_SERVERS
                        value: kafka:9092
                      - name: CONFIG_STORAGE_TOPIC
                        value: my_connect_configs
                      - name: GROUP_ID
                        value: "1"
                      - name: OFFSET_STORAGE_TOPIC
                        value: my_connect_offsets
                      - name: STATUS_STORAGE_TOPIC
                        value: my_connect_statuses
                  image: debezium/connect
                  name: debezium
                  ports:
                      - containerPort: 8083
                        protocol: TCP
                  resources:
                      requests:
                          memory: "128Mi"
                          cpu: "256m"
                      limits:
                          memory: "256Mi"
                          cpu: "512m"
            restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
    labels:
        service: debezium
    name: debezium
spec:
    ports:
        - name: "8083"
          port: 8083
          targetPort: 8083
    selector:
        service: debezium
