deployment/kubernentes/kafka2.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
    labels:
        service: kafka
    name: kafka
spec:
    serviceName: kafka
    replicas: 3
    selector:
        matchLabels:
            service: kafka
    template:
        metadata:
            labels:
                network/kafka-network: "true"
                service: kafka
        spec:
            securityContext:
                fsGroup: 1000
            enableServiceLinks: false
            containers:
                - name: kafka
                  imagePullPolicy: IfNotPresent
                  image: bitnami/kafka:latest
                  ports:
                      - containerPort: 29092
                      - containerPort: 9092
                  resources: {}
                  volumeMounts:
                      - mountPath: /var/lib/kafka/
                        name: kafka-data
            hostname: kafka
            restartPolicy: Always
    volumeClaimTemplates:
        - metadata:
              name: kafka-data
          spec:
              accessModes:
                  - ReadWriteOnce
              resources:
                  requests:
                      storage: 1Gi

---
apiVersion: v1
kind: Service
metadata:
    labels:
        service: kafka
    name: kafka
spec:
    clusterIP: None
    selector:
        service: kafka
    ports:
        - name: internal
          port: 29092
          targetPort: 29092
        - name: external
          port: 30092
          targetPort: 9092
