deployment/kubernentes/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        service: user-service
    name: user-service
spec:
    replicas: 1
    selector:
        matchLabels:
            service: user-service
    template:
        metadata:
            labels:
                service: user-service
        spec:
            containers:
                - env:
                      - name: APP_PORT
                        valueFrom:
                            configMapKeyRef:
                                key: APP_PORT
                                name: env-user-service
                      - name: DB_HOST
                        valueFrom:
                            configMapKeyRef:
                                key: DB_HOST
                                name: env-user-service
                      - name: DB_NAME
                        valueFrom:
                            configMapKeyRef:
                                key: DB_NAME
                                name: env-user-service
                      - name: DB_PASSWORD
                        valueFrom:
                            configMapKeyRef:
                                key: DB_PASSWORD
                                name: env-user-service
                      - name: DB_PORT
                        valueFrom:
                            configMapKeyRef:
                                key: DB_PORT
                                name: env-user-service
                      - name: DB_USERNAME
                        valueFrom:
                            configMapKeyRef:
                                key: DB_USERNAME
                                name: env-user-service
                      - name: KAFKA_BOOTSTRAP_SERVERS
                        valueFrom:
                            configMapKeyRef:
                                key: KAFKA_BOOTSTRAP_SERVERS
                                name: env-user-service
                  image: quyennv0602/datn_user_service:0.0.2
                  name: user-service
                  ports:
                      - containerPort: 8088
                        protocol: TCP
                  resources:
                      requests:
                          memory: "128Mi"
                          cpu: "256m"
                      limits:
                          memory: "256Mi"
                          cpu: "512m"
            restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
    labels:
        service: user-service
    name: user-service
spec:
    ports:
        - name: "8088"
          port: 8088
          targetPort: 8088
    selector:
        service: user-service
