deployment/kubernentes/zookeeper2.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
    labels:
        service: zookeeper
    name: zookeeper
spec:
    serviceName: zookeeper
    replicas: 1
    selector:
        matchLabels:
            service: zookeeper
    template:
        metadata:
            labels:
                network/kafka-network: "true"
                service: zookeeper
        spec:
            securityContext:
                fsGroup: 1000
            enableServiceLinks: false
            containers:
                - name: zookeeper
                  imagePullPolicy: Always
                  image: zookeeper
                  ports:
                      - containerPort: 2181
                  resources: {}
                  volumeMounts:
                      - mountPath: /var/lib/zookeeper/data
                        name: zookeeper-data
                      - mountPath: /var/lib/zookeeper/log
                        name: zookeeper-log
            hostname: zookeeper
            restartPolicy: Always
    volumeClaimTemplates:
        - metadata:
              name: zookeeper-data
          spec:
              accessModes:
                  - ReadWriteOnce
              resources:
                  requests:
                      storage: 1024Mi
        - metadata:
              name: zookeeper-log
          spec:
              accessModes:
                  - ReadWriteOnce
              resources:
                  requests:
                      storage: 1024Mi

---
apiVersion: v1
kind: Service
metadata:
    labels:
        service: zookeeper
    name: zookeeper
spec:
    ports:
        - name: "2181"
          port: 2181
          targetPort: 2181
    selector:
        service: zookeeper
